--- a/index.html
+++ b/index.html
@@ -9,20 +9,31 @@
     </head>
    
     <body>
-        <header>
-            <div class="container">
-                <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/Logo.jpg">
-               <h1>&#9776;<h1>
-            <div class="container1">
-                <h1>Find Affordable Healthcare</h1>
-                <p>Join the thousands of others who have exercised their rights to quality healthcare at a price you can afford</p>
-                <div class="button-white"></div>
-                <div class="button-white"></div>
-                <div class="button-blue">Search</div>
-             </div>
+        <nav>
+            <img src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/Logo.jpg">
+            <li><i class="fa fa-navicon"></i></li>
+        </nav>
+        <div class="container1">
+            <h1>Find Affordable Healthcare</h1>
+            <p>Join the thousand of others who exercisedtheir rights to equality healthcare</p>
+            <div class="box1">
+                <form>
+                    <button type="submit"><i class="fa fa-map-marker"></i></button>
+                    <input type="text" placeholder="Ahmedabad">
+                    <button type="submit"><i class="fa fa-crosshairs"></i></button>
+                </form>
             </div>
-         
-        </header>      
+            <div class="box1">
+                <form>
+                    <input type="text" placeholder="search for doctor,hospital">
+                </form>
+            </div>
+            <button class="button" type="submit">Search</button>
+        </div>
+        <div class="container2">
+            <h2>How it work</h2>
+            <p>Various facilities is provided here.But there is protocol which need to be followed so that you get the service at its best.</p>
+        </div>      
     </body>
 </html>
  
